--- a/.config
+++ b/.config
@@ -73,7 +73,7 @@ CONFIG_MTK_MUMIMO_SUPPORT=y
 CONFIG_MTK_MU_RA_SUPPORT=y
 CONFIG_MTK_OFFCHANNEL_SCAN_FEATURE=y
 CONFIG_MTK_OWE_SUPPORT=y
-# CONFIG_MTK_QOS_R1_SUPPORT is not set
+CONFIG_MTK_QOS_R1_SUPPORT=y
 CONFIG_MTK_RA_PHY_RATE_SUPPORT=y
 CONFIG_MTK_RED_SUPPORT=y
 CONFIG_MTK_RTMP_FLASH_SUPPORT=y
@@ -122,7 +122,7 @@ CONFIG_PACKAGE_e2fsprogs=m
 CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_ip-bridge=y
-# CONFIG_PACKAGE_ip6tables is not set
+CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_ipset=y
 CONFIG_PACKAGE_iptables-mod-filter=y
 # CONFIG_PACKAGE_iptables-mod-tproxy is not set
@@ -149,10 +149,10 @@ CONFIG_PACKAGE_kmod-crypto-sha256=y
 CONFIG_PACKAGE_kmod-crypto-sha512=y
 CONFIG_PACKAGE_kmod-fs-autofs4=y
 CONFIG_PACKAGE_kmod-fs-vfat=y
-# CONFIG_PACKAGE_kmod-ip6tables is not set
+CONFIG_PACKAGE_kmod-ip6tables=y
 CONFIG_PACKAGE_kmod-ipt-filter=y
-# CONFIG_PACKAGE_kmod-ipt-nat6 is not set
-# CONFIG_PACKAGE_kmod-ipt-raw6 is not set
+CONFIG_PACKAGE_kmod-ipt-nat6=y
+CONFIG_PACKAGE_kmod-ipt-raw6=y
 # CONFIG_PACKAGE_kmod-ipt-tproxy is not set
 CONFIG_PACKAGE_kmod-ipt-u32=y
 CONFIG_PACKAGE_kmod-ipt-ulog=y
@@ -160,16 +160,17 @@ CONFIG_PACKAGE_kmod-lib-crc16=m
 CONFIG_PACKAGE_kmod-lib-crc32c=y
 CONFIG_PACKAGE_kmod-mediatek_hnat=y
 CONFIG_PACKAGE_kmod-mt_wifi=y
-# CONFIG_PACKAGE_kmod-nf-ipt6 is not set
-# CONFIG_PACKAGE_kmod-nf-nat6 is not set
-# CONFIG_PACKAGE_kmod-nf-nathelper-extra is not set
-# CONFIG_PACKAGE_kmod-nf-reject6 is not set
+CONFIG_PACKAGE_kmod-nf-ipt6=y
+CONFIG_PACKAGE_kmod-nf-nat6=y
+CONFIG_PACKAGE_kmod-nf-nathelper-extra=y
+CONFIG_PACKAGE_kmod-nf-reject6=y
 CONFIG_PACKAGE_kmod-nls-base=y
 CONFIG_PACKAGE_kmod-nls-cp437=y
 CONFIG_PACKAGE_kmod-nls-iso8859-1=y
 CONFIG_PACKAGE_kmod-nls-utf8=y
 CONFIG_PACKAGE_kmod-scsi-core=y
 CONFIG_PACKAGE_kmod-warp=y
+CONFIG_PACKAGE_kmod-zram=y
 CONFIG_PACKAGE_kvcedit=y
 CONFIG_PACKAGE_l1profile=y
 CONFIG_PACKAGE_libatomic=y
@@ -218,26 +219,26 @@ CONFIG_PACKAGE_luci-app-mtwifi=y
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust_Server is not set
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Simple_Obfs is not set
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray is not set
-# CONFIG_PACKAGE_luci-app-upnp is not set
+CONFIG_PACKAGE_luci-app-upnp=y
 # CONFIG_PACKAGE_luci-app-turboacc is not set
 # CONFIG_PACKAGE_luci-app-vssr_INCLUDE_ShadowsocksR_Libev_Server is not set
 # CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Trojan is not set
 # CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray is not set
 # CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray_plugin is not set
 # CONFIG_PACKAGE_luci-theme-argon is not set
-# CONFIG_PACKAGE_luci-i18n-upnp-zh-cn is not set
-# CONFIG_PACKAGE_luci-proto-ipv6 is not set
-# CONFIG_PACKAGE_luci-proto-ppp is not set
+CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
+CONFIG_PACKAGE_luci-proto-ipv6=y
+CONFIG_PACKAGE_luci-proto-ppp=n
 CONFIG_PACKAGE_luci-i18n-mtk-zh-cn=y
 CONFIG_PACKAGE_luci-theme-bootstrap-mod=y
 CONFIG_PACKAGE_mii_mgr=y
-# CONFIG_PACKAGE_miniupnpd is not set
+CONFIG_PACKAGE_miniupnpd=y
 CONFIG_PACKAGE_mkf2fs=m
 CONFIG_PACKAGE_nano=y
-# CONFIG_PACKAGE_odhcp6c is not set
-# CONFIG_PACKAGE_odhcp6c_ext_cer_id is not set
-# CONFIG_PACKAGE_odhcpd-ipv6only is not set
-# CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id is not set
+CONFIG_PACKAGE_odhcp6c=y
+CONFIG_PACKAGE_odhcp6c_ext_cer_id=y
+CONFIG_PACKAGE_odhcpd-ipv6only=y
+CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=y
 # CONFIG_PACKAGE_omcproxy is not set
 CONFIG_PACKAGE_openssh-keygen=y
 CONFIG_PACKAGE_openssh-sftp-server=y
@@ -252,8 +253,8 @@ CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_wifi-profile=y
 CONFIG_PACKAGE_wireless-regdb=y
 CONFIG_PACKAGE_wireless-tools=y
-# CONFIG_PACKAGE_ipv6helper is not set
-# CONFIG_PACKAGE_zram-swap is not set
+CONFIG_PACKAGE_ipv6helper=y
+CONFIG_PACKAGE_zram-swap=y
 CONFIG_PACKAGE_zlib=y
 # CONFIG_PKG_CHECK_FORMAT_SECURITY is not set
 # CONFIG_PKG_FORTIFY_SOURCE_1 is not set
@@ -281,5 +282,5 @@ CONFIG_PACKAGE_kmod-ipt-offload=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
 CONFIG_PACKAGE_kmod-nf-flow=y
 # CONFIG_PACKAGE_kmod-tcp-bbr is not set
-# CONFIG_PACKAGE_kmod-ppp is not set
+CONFIG_PACKAGE_kmod-ppp=n
 # CONFIG_WARP_ATC_SUPPORT is not set
