--- a/.config
+++ b/.config
@@ -121,6 +121,9 @@ CONFIG_PACKAGE_blockdev=m
 CONFIG_PACKAGE_datconf=y
 CONFIG_PACKAGE_datconf-lua=y
 CONFIG_PACKAGE_dnsmasq=y
+# CONFIG_PACKAGE_kmod-zram is not set
+# CONFIG_PACKAGE_zram-swap is not set
+# CONFIG_PROCD_ZRAM_TMPFS is not set
 # CONFIG_PACKAGE_dnsmasq-full is not set
 CONFIG_PACKAGE_e2fsprogs=m
 CONFIG_PACKAGE_ethtool=y
@@ -195,10 +198,11 @@ CONFIG_PACKAGE_libsmartcols=m
 CONFIG_PACKAGE_libss=m
 CONFIG_PACKAGE_libstdcpp=y
 CONFIG_PACKAGE_libudev-zero=y
+CONFIG_PACKAGE_luci-app-autotimeset=y
 # CONFIG_PACKAGE_libustream-openssl is not set
 CONFIG_PACKAGE_libuuid=y
 CONFIG_PACKAGE_losetup=m
-CONFIG_PACKAGE_luci-app-autoreboot=y
+# CONFIG_PACKAGE_luci-app-autoreboot is not set
 CONFIG_PACKAGE_luci-app-mtk=y
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
@@ -210,11 +214,13 @@ CONFIG_PACKAGE_luci-app-upnp=y
 # CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Trojan is not set
 # CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray is not set
 # CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray_plugin is not set
-CONFIG_PACKAGE_luci-i18n-autoreboot-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-autoreboot-zh-cn is not set
 CONFIG_PACKAGE_luci-i18n-mtk-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-turboacc-zh-cn is not set
 CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-autotimeset-zh-cn=y
 CONFIG_PACKAGE_luci-theme-bootstrap-mod=y
+CONFIG_PACKAGE_luci-theme-argonv3=y
 CONFIG_PACKAGE_mii_mgr=y
 CONFIG_PACKAGE_miniupnpd=y
 CONFIG_miniupnpd_IGDv2=y
