--- a/.config
+++ b/.config
@@ -226,6 +226,7 @@ CONFIG_PACKAGE_luci-lib-taskd=y
 CONFIG_PACKAGE_luci-lib-xterm=y
 CONFIG_PACKAGE_kmod-taskd=y
 CONFIG_PACKAGE_nas_luci=y
+CONFIG_PACKAGE_luci-app-meta-istorex=y
 CONFIG_PACKAGE_luci-app-quickstart=y
 CONFIG_PACKAGE_luci-app-eqos-mtk=y
 CONFIG_PACKAGE_luci-i18n-eqos-mtk-zh-cn=y
