--- a/.config
+++ b/.config
@@ -197,8 +197,8 @@ CONFIG_PACKAGE_kmod-tcp-cubic=y
 CONFIG_PACKAGE_kmod-tun=y
 CONFIG_PACKAGE_kmod-warp=y
 # CONFIG_PACKAGE_kmod-zerotier is not set
-# CONFIG_PACKAGE_kmod-zram is not set
-# CONFIG_PACKAGE_zram-swap is not set
+CONFIG_PACKAGE_kmod-zram=y
+CONFIG_PACKAGE_zram-swap=y
 # CONFIG_PROCD_ZRAM_TMPFS is not set
 # CONFIG_PACKAGE_kmod-quickstart is not set
 CONFIG_PACKAGE_kvcedit=y
