--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 CONFIG_TARGET_mediatek=y
 CONFIG_TARGET_mediatek_mt7981=y
-CONFIG_TARGET_mediatek_mt7981_DEVICE_nokia_ea0326gmp=y
+CONFIG_TARGET_mediatek_mt7981_DEVICE_jcg_q30=y
 CONFIG_DEVEL=y
 CONFIG_TOOLCHAINOPTS=y
 CONFIG_BUSYBOX_CUSTOM=y
@@ -197,8 +197,8 @@ CONFIG_PACKAGE_kmod-tcp-cubic=y
 CONFIG_PACKAGE_kmod-tun=y
 CONFIG_PACKAGE_kmod-warp=y
 # CONFIG_PACKAGE_kmod-zerotier is not set
-CONFIG_PACKAGE_kmod-zram=y
-CONFIG_PACKAGE_zram-swap=y
+# CONFIG_PACKAGE_kmod-zram is not set
+# CONFIG_PACKAGE_zram-swap is not set
 # CONFIG_PROCD_ZRAM_TMPFS is not set
 # CONFIG_PACKAGE_kmod-quickstart is not set
 CONFIG_PACKAGE_kvcedit=y
